# uv-pl

./: .gitignore  README.md  aa.py  main.py  pyproject.toml  pyproject.toml.bak
configs/: train.yaml
configs/callbacks/: default.yaml  early_stopping.yaml  model_checkpoint.yaml
configs/data/: mnist.yaml  mnist2.yaml
configs/debug/: default.yaml
configs/experiment/: exp1.yaml
configs/hydra/: default.yaml
configs/logger/: csv.yaml  wandb.yaml
configs/model/: mnist.yaml
configs/paths/: default.yaml
configs/sweeper/: optuna.yaml
configs/trainer/: default.yaml
src/: train.py
src/data/: mnist.py
src/utils/: __init__.py  hydra_resolvers.py  instantiators.py  paths.py  ranked_logger.py
